src/scss/components/photofeed.scss
.photofeed {
	max-width: 700px;
}

.photofeed__header {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 1em;
	background-color: $color-bg;
}

.photofeed__back {
	position: relative;
	display: inline-block;
	margin-left: 0.5em;
	margin-right: 0.5em;
	padding-left: 1.25em;
	font-style: italic;
	text-align: right;

	&:before {
		content: '<';
		position: absolute;
		left: 0.25em;
		font-style: normal;
	}

	@media (min-width: 500px) {
		margin-left: 1em;
		margin-right: 0;
	}
}

.photofeed__heading,
.photofeed__photo-title {
	margin: 0;
	font-size: 1em;
	font-weight: 400;
	line-height: 1.2;
	font-style: italic;
	color: $color-bg;
	background-color: $color-active;
}

.photofeed__list {
	list-style: none;
	padding-left: 0;
	margin: 0 0 5em;

	@media (min-width: 500px) {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
	}
}

.photofeed__item {
	display: block;
	width: 100%;
	margin-bottom: 1em;

	@media (min-width: 500px) {
		width: calc(50% - 0.5em);
	}

	&.state-show-details {
		overscroll-behavior: contain;
		overflow-y: hidden;
		overflow-x: scroll;
		display: flex;
		flex-direction: column;
		position: fixed;
		z-index: 1000;
		top: 0;
		left: 0;
		width: auto;
		height: 100vh;

		@media (min-width: 500px) {
			flex-direction: row;
		}

		.photofeed__link {
			&:before {
				display: none;
			}
			&:hover,
			&:focus {
				&:before {
					display: none;
				}
			}
		}
		&.state-loaded {
			.photofeed__link {
				&:after {
					display: none;
				}
			}
		}
	}

	&.state-loaded {
		.photofeed__link {
			&:after {
				display: none;
			}
		}
	}
}

.photofeed__link {
	flex-shrink: 0;
	display: block;
	position: relative;
	z-index: 4;
	height: 0;
	padding-bottom: 100%;
	color: transparent;
	background-color: $color-bg;
	background-image: url(../../dist/images/grid.gif);
	cursor: wait;

	&:after {
		content: 'loading...';
		display: block;
		position: absolute;
		z-index: 10;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		padding: 0.25em;
		color: $color-primary;
		background-color: $color-bg;
		font-style: italic;
		text-decoration: underline;
	}

	&:hover,
	&:focus {
		outline: none;
		color: transparent;
		background-color: $color-bg;
	}

	.state-loaded & {
		cursor: pointer;
		height: auto;
		padding-bottom: 0;

		@media (min-width: 500px) {
			height: 100%;
		}

		&:before {
			content: '';
			display: none;
			position: absolute;
			z-index: 3;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			transform: translate(0.5em, 0.5em);
			background-color: $color-primary;
		}

		/*
		&:after {
			content: 'view more';
			font-style: normal;
		}
		*/

		&:hover,
		&:focus {
			&:before {
				display: block;
			}
		}
	}
}

.photofeed__img {
	position: relative;
	z-index: 5;
	display: block;
	width: 100vw;
	visibility: hidden;

	.state-loaded & {
		visibility: visible;
	}

	@media (min-width: 500px) {
		width: auto;
		height: 100%;
	}
}

.photofeed__description {
	overflow: hidden;
	position: relative;
	z-index: 2;
	display: none;
	flex-shrink: 0;
	height: 100%;
	padding: 1em 5em 1em 1em;
	background-color: $color-bg;

	@media (min-width: 500px) {
		width: 75vw;
		height: auto;
	}

	@media (min-width: 1000px) {
		width: 50vw;
	}

	.state-show-details & {
		display: block;
	}

	p {
		line-height: 1.5;
	}
}

.photofeed__close-btn {
	display: none;
	position: fixed;
	z-index: 3;
	top: 0.5em;
	right: 0.5em;
	padding: 0.5em;
	color: $color-primary;
	font-family: $font-plex;
	font-size: 1em;
	text-decoration: underline;
	background-color: $color-bg;

	&:hover,
	&:focus {
		color: $color-bg;
		background-color: $color-secondary;
		text-decoration: none;
	}

	.state-show-details & {
		display: block;
	}
}

.photofeed__photo-title {
	display: inline-block;
	margin-right: 1em;
}

.photofeed__date {
	display: inline-block;
	line-height: 1.2;
	color: $color-bg;
	background-color: $color-primary;
}

.photofeed__help {
	display: block;
	margin-top: 1em;
	color: $color-subdued;

	@media (min-width: 500px) {
		display: none;
	}
}

